# filewise

./: .env.example  .gitattributes  .gitignore  package.json  pnpm-lock.yaml
ai-sidecar/: pyproject.toml
ai-sidecar/src/: main.py  security.py  token_budget.py
docs/: ai-deep-expansion-plan.md  stitch-prompts.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  automation.rs  chat.rs  clean.rs  file_ops.rs  image.rs  index.rs  mod.rs  security.rs  settings.rs  snapshot.rs  vault.rs
src-tauri/src/db/: mod.rs
src-tauri/src/engine/: hasher.rs  mod.rs  scanner.rs  watcher.rs
src-tauri/src/security/: mod.rs
src/components/common/: AppShell.tsx  LockScreen.tsx  PlaceholderPage.tsx
src/pages/: ChangelogPage.tsx  ChatPage.tsx  CleanPage.tsx  DashboardPage.tsx  HelpPage.tsx  ImagePage.tsx  OrganizePage.tsx  ReportPage.tsx  SearchPage.tsx  SecurityPage.tsx  SettingsPage.tsx
src/services/: agent.ts  file.service.ts
src/stores/: useAppStore.ts
src/styles/: app-shell.css
src/types/: index.ts
src/utils/: path.util.ts
