[project]
name = "filewise-ai"
version = "0.1.0"
requires-python = ">=3.11"
description = "FileWise AI Sidecar - 本地 AI 推理引擎"
dependencies = [
    "ollama>=0.3",
    "openai>=1.0",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.10",
    "tiktoken>=0.7",
    "pypdf2>=3.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
