[package]
name = "filewise"
version = "1.6.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "filewise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener  = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-notification = "2"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Async runtime
tokio            = { version = "1", features = ["full"] }

# HTTP client (Ollama AI API)
reqwest          = { version = "0.12", features = ["json"] }

# File traversal & watching
walkdir          = "2"
notify           = "6"
ignore           = "0.4"

# Hashing (integrity + dedup)
blake3           = "1"

# Database (bundled SQLite)
rusqlite         = { version = "0.31", features = ["bundled"] }

# Parallel processing
rayon            = "1"

# Error handling
anyhow           = "1"
thiserror        = "1"

# Logging
log              = "0.4"
env_logger       = "0.11"

# Encryption (AES-256-GCM for DB key)
aes-gcm          = "0.10"
keyring          = "3"
rand             = "0.8"
hex              = "0.4"

# Argon2id (password key derivation)
argon2           = "0.5"

# Base64 (image encoding for vision models)
base64           = "0.22"

# Regex (sensitive data detection)
regex            = "1"

# CSV export (audit logs)
csv              = "1"

# UUID for snapshots
uuid             = { version = "1", features = ["v4"] }

# Time
chrono           = { version = "0.4", features = ["serde"] }

# System info (disk usage, memory)
sysinfo          = { version = "0.33", features = ["disk"] }

# Known user directories (Desktop, Downloads, etc.)
dirs             = "5"

# Windows API (temp paths, shell known folders)
[target.'cfg(windows)'.dependencies]
winapi           = { version = "0.3", features = ["shlobj", "knownfolders", "combaseapi"] }

